test_outputs/connlist/exposure_only_matched_rules_test_exposure_output.txt
0.0.0.0-255.255.255.255[External] => hello-world/workload-b[Deployment] : All Connections
hello-world/workload-a[Deployment] => hello-world/workload-b[Deployment] : All Connections
hello-world/workload-b[Deployment] => 0.0.0.0-255.255.255.255[External] : All Connections
hello-world/workload-b[Deployment] => hello-world/workload-a[Deployment] : All Connections

Exposure Analysis Result:
Egress Exposure:
hello-world/workload-b[Deployment] 	=> 	0.0.0.0-255.255.255.255[External] : All Connections
hello-world/workload-b[Deployment] 	=> 	entire-cluster : All Connections

Ingress Exposure:
hello-world/workload-b[Deployment] 	<= 	0.0.0.0-255.255.255.255[External] : All Connections
hello-world/workload-b[Deployment] 	<= 	entire-cluster : All Connections

Workloads not protected by network policies:
hello-world/workload-b[Deployment] is not protected on Egress
hello-world/workload-b[Deployment] is not protected on Ingress
